Prevent tooltips/dropdowns in sidebar from being clipped.

--- a/Resources/public/css/layout_body_left.css
+++ b/Resources/public/css/layout_body_left.css
@@ -189,7 +189,7 @@ div.right_column_container {
 	display: block;
 	margin: 0px 0px 0px -190px;
 	padding: 0px;
-	overflow: hidden;
+	overflow: visible;
 	float: right;
 	width: 190px;
 }
@@ -199,7 +199,7 @@ div.right_column {
 	
 	margin: 8px 5px 5px;
 	padding: 5px;
-	overflow: hidden;
+	overflow: visible;
 /*	border: 1px solid #ccc;
 	border-radius: 5px;*/
 }
